Add arxiv papers post; corrections of mobile layout

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://lopespm.github.com
 title: Byte Tank
-subtitle: 
+subtitle: Pedro Lopes Blog
 author: Pedro Lopes
 simple_search:
 description:
