--- a/_config.yml
+++ b/_config.yml
@@ -32,8 +32,8 @@ source: source
 destination: public
 plugins: plugins
 code_dir: downloads/code
-category_dir: blog/categories
-tag_dir: blog/tags
+category_dir: categories
+tag_dir: tags
 #markdown: rdiscount
 pygments: false # default python pygments have been replaced by pygments.rb
 
