--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://lopespm.github.io
+url: https://lopespm.com
 title: Byte Tank
 subtitle: Pedro Lopes Blog
 author: Pedro Lopes
