--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ code_dir: downloads/code
 category_dir: categories
 tag_dir: tags
 #markdown: rdiscount
-highlighter: false # default python pygments have been replaced by pygments.rb
+pygments: false # default python pygments have been replaced by pygments.rb
 
 paginate: 10          # Posts per page on the blog index
 pagination_dir: blog  # Directory base for pagination URLs eg. /blog/page/2/
